--- a/frontend/src/Components/Home.css
+++ b/frontend/src/Components/Home.css
@@ -1,6 +1,6 @@
 
 .header {
-  background-color: #333;
+  background-color:  #d1c5cb;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -10,7 +10,12 @@
   margin: 0;
 }
 
-
+.full_home{
+  
+    background:url("./images/money.jpg")no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 .home-container {
     max-width: 800px;
@@ -21,8 +26,10 @@
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background:transparent;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(30px);
+
   }
   
   .home-container h1 {
@@ -61,12 +68,10 @@
   
   /* Footer Styles */
   .footer {
-    background-color: #222;
+    background-color: #d1c5cb;
     color: #fff;
     padding: 30px 20px;
     text-align: center;
-    position: absolute;
-    bottom: 0;
     width: 100%;
   }
 
