--- a/frontend/src/Components/Otplogin.css
+++ b/frontend/src/Components/Otplogin.css
@@ -3,9 +3,10 @@
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid transparent;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background: transparent;
+
   }
   
   /* Style for the form */
@@ -19,29 +20,37 @@
   .phone-auth-form label {
     font-weight: bold;
   }
+
   
   /* Style for inputs */
   .phone-auth-form input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+    width:100%;
+    height: 100%;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,.2);
+    outline: none;
+    border-radius: 40px;
+    font-size: 16px;
+    color: aliceblue;
+    padding: 20px 45px 20px 20px;
   }
   
   /* Style for buttons */
   .phone-auth-form button {
-    padding: 10px 20px;
+    width: 100%;
+    height: 45px;
+    background: aliceblue;
     border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-size: 16px;
+    color: #333;
+    font-weight: 700;
   }
   
   .phone-auth-form button:hover {
-    background-color: #0056b3;
+    background-color: #20cf43;
   }
   
   /* Style for alert messages */
